--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-query": "3.12.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "tailwindcss": "2.0.3"
   },
   "devDependencies": {
     "typescript": "4.1.3"
