--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "17.0.1",
     "react-query": "3.12.0",
     "react-scripts": "4.0.0",
-    "tailwindcss": "2.0.3"
+    "tailwindcss": "2.0.3",
+    "video.js": "7.11.4"
   },
   "devDependencies": {
     "typescript": "4.1.3"
