--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "7.13.8",
+    "@tailwindcss/forms": "0.2.1",
     "axios": "0.21.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
